# kernel-config-diff-to-fragment

./: .gitignore  Makefile.am  README  configure.ac
cfg/: Makefile.am
src/: Makefile.am  kernel-config-diff-to-fragment.c
