## Copyright (C) 2023  Trevor Woerner <twoerner@gmail.com>

########################
## src/Makefile.am
########################
SUBDIRS =
AM_CFLAGS = -Wall -Werror -Wextra -Wconversion -Wreturn-type -Wstrict-prototypes

bin_PROGRAMS = kernel-config-diff-to-fragment
kernel_config_diff_to_fragment_SOURCES = kernel-config-diff-to-fragment.c
